--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,8 +2,16 @@ version: 2.1
 
 orbs:
   hello: circleci/hello-build@0.0.7 # uses the circleci/buildpack-deps Docker image
+jobs:
+  test_icle_helper:
+    docker:
+      - image: circleci/python
+    steps:
+      - checkout
+      - run: python test_me.py
 
 workflows:
   "Hello Workflow":
     jobs:
       - hello/hello-build
+      - test_icle_helper
